# httplive_dvr

./: Cargo.toml  Dockerfile  docker-compose.sample.yml  openapi.yaml
frontend/: package.json  pnpm-lock.yaml
frontend/app/: app.vue
src/: ffmpeg.rs  main.rs  recording.rs  state.rs
src/handlers/: common.rs  finalize.rs  list_finished.rs  list_live.rs  mod.rs  start.rs  stop.rs
