[package]
name = "httplive_dvr"
version = "0.1.0"
edition = "2024"

[dependencies]
ffmpeg-next = "8.0.0"
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
http = "1.3.1"